Added webpages and health start

--- a/health.html
+++ b/health.html
@@ -3,17 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adulting App</title>
-
+    <title>Health</title>
 </head>
 <body>
-<h1>Adulting App</h1>
-<h2></h2>
-
-
-<a rel="stylesheet noopener noreferrer" href= "health.html"target="_blank" > Health</a>
-
-
-
+<h1>Health</h1>
+<p>Based on your age, these are things to consider to maintain you healthspan. </p>
 </body>
 </html>
