update with logo and reoganized files

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 
 </head>
 <body>
+<image src =images/juggle.png alt= "Company Logo"> </image>
 <h1>Adulting App</h1>
-<h2></h2>
 
 
-<a rel="stylesheet noopener noreferrer" href= "health.html"target="_blank" > Health</a>
+
+
+<a rel="stylesheet noopener noreferrer" href= pages/health.html target="_blank" > Health</a>
 
 
 
